--- a/packages/components/breadcrumbs/breadcrumbs.scss
+++ b/packages/components/breadcrumbs/breadcrumbs.scss
@@ -1,32 +1,98 @@
 @use '../core/styles/common/tokens';
+@use '../core/styles/common/vendor-prefixes';
 
 .kbq-breadcrumbs {
     display: flex;
     align-items: center;
+    gap: var(--kbq-breadcrumbs-gap);
 
     .kbq-breadcrumb-item {
         &.kbq-button,
         &.kbq-button-icon {
+            --kbq-button-size-border-radius: var(--kbq-breadcrumb-item-border-radius);
             --kbq-button-size-horizontal-padding: var(--kbq-breadcrumb-item-horizontal-padding);
             --kbq-button-size-height: var(--kbq-breadcrumb-item-height);
             --kbq-button-transparent-contrast-fade-on-foreground: var(--kbq-foreground-contrast-secondary);
+            --kbq-button-transparent-contrast-fade-on-right-icon: var(--kbq-breadcrumb-item-icon-color);
+            --kbq-button-transparent-contrast-fade-on-left-icon: var(--kbq-breadcrumb-item-icon-color);
 
             padding-top: 1px;
             padding-bottom: 1px;
 
             &[aria-current='page'] {
                 --kbq-button-transparent-contrast-fade-on-states-disabled-foreground: var(--kbq-foreground-contrast);
-                color: var(--kbq-foreground-contrast);
+
+                &.kbq-disabled {
+                    --kbq-button-transparent-contrast-fade-on-states-disabled-left-icon: var(
+                        --kbq-breadcrumb-item-icon-color
+                    );
+                    --kbq-button-transparent-contrast-fade-on-states-disabled-right-icon: var(
+                        --kbq-breadcrumb-item-icon-color
+                    );
+                }
+            }
+        }
+
+        &.kbq-dropdown-trigger {
+            &.kbq-button,
+            &.kbq-button-icon {
+                &:not(.kbq-disabled) {
+                    &:hover,
+                    &.kbq-hover,
+                    &.cdk-keyboard-focused {
+                        .kbq-icon {
+                            --kbq-button-transparent-contrast-fade-on-left-icon: var(
+                                --kbq-states-icon-contrast-fade-hover
+                            );
+                            --kbq-button-transparent-contrast-fade-on-right-icon: var(
+                                --kbq-states-icon-contrast-fade-hover
+                            );
+                        }
+                    }
+
+                    &:active,
+                    &.kbq-active {
+                        .kbq-icon {
+                            --kbq-button-transparent-contrast-fade-on-left-icon: var(
+                                --kbq-states-icon-contrast-fade-active
+                            );
+                            --kbq-button-transparent-contrast-fade-on-right-icon: var(
+                                --kbq-states-icon-contrast-fade-active
+                            );
+                        }
+                    }
+                }
             }
         }
     }
 
     .kbq-breadcrumb__expand {
         &.kbq-button-icon {
+            --kbq-button-size-height: var(--kbq-size-xxl);
+            width: var(--kbq-size-xxl);
             --kbq-button-icon-size-horizontal-padding: var(--kbq-breadcrumb-item-expand-horizontal-padding);
 
             .kbq-icon {
-                color: var(--kbq-icon-contrast-fade) !important;
+                --kbq-button-transparent-contrast-fade-on-left-icon: var(--kbq-icon-contrast-fade);
+            }
+
+            &:not(.kbq-disabled) {
+                &:hover,
+                &.kbq-hover,
+                &.cdk-keyboard-focused {
+                    .kbq-icon {
+                        --kbq-button-transparent-contrast-fade-on-left-icon: var(--kbq-states-icon-contrast-fade-hover);
+                    }
+                }
+
+                &:active,
+                &.kbq-active {
+                    .kbq-icon {
+                        --kbq-button-transparent-contrast-fade-on-left-icon: var(
+                            --kbq-states-icon-contrast-fade-active
+                        );
+                    }
+                }
             }
         }
     }
@@ -44,20 +110,30 @@
 
     // typography
     .kbq-breadcrumb__separator {
-        @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-normal);
+        @include vendor-prefixes.user-select(none);
+        @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-big);
     }
 
     &.kbq-breadcrumbs_compact {
+        --kbq-breadcrumb-item-height: var(--kbq-size-xxl);
+
         .kbq-button,
         .kbq-button-icon {
-            @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-compact);
+            @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-normal);
+        }
+    }
+
+    &.kbq-breadcrumbs_normal {
+        .kbq-button,
+        .kbq-button-icon {
+            @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-big);
         }
     }
 
     &.kbq-breadcrumbs_big {
         .kbq-button,
         .kbq-button-icon {
-            @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-big-strong);
+            @include tokens.kbq-typography-level-to-styles-css-variables(typography, subheading);
         }
     }
 }
